# MessengerQML

./: .gitmodules  CMakeLists.txt  README.md
App/: CMakeLists.txt
App/QMLContent/: main.qml  qml_content.qrc
App/QMLContent/AuthorizationPage/: AuthorizationPage.qml
App/QMLContent/ClientPage/: ClientPage.qml
App/QMLContent/ClientPage/ActionsWidget/: ActionBlock.qml  ActionsWidget.qml
App/QMLContent/ClientPage/ActionsWidget/Actions/: CreateChatAction.qml
App/QMLContent/ClientPage/ChatListView/: ChatBlock.qml  ChatListView.qml  ChatSearchLine.qml
App/QMLContent/ClientPage/ChatView/: ChatView.qml
App/QMLContent/ClientPage/ChatView/InfoBarWidget/: InfoBarWidget.qml
App/QMLContent/ClientPage/ChatView/InputMessageWidget/: TextEditor.qml  (+1 more)
App/Source/: main.cpp
ClientApp/: CMakeLists.txt
ClientApp/QMLContent/: main.qml  qml_content.qrc
ClientApp/QMLContent/AuthorizationPage/: AuthorizationPage.qml
ClientApp/QMLContent/ClientPage/: ClientPage.qml
ClientApp/QMLContent/ClientPage/ActionsWidget/Actions/: CreateChatAction.qml
ClientApp/QMLContent/ClientPage/ChatListView/: ChatListView.qml
ClientApp/QMLContent/ClientPage/ChatView/: ChatView.qml
ClientApp/QMLContent/ClientPage/ChatView/InfoBarWidget/: InfoBarWidget.qml
ClientApp/QMLContent/ClientPage/ChatView/InputMessageWidget/: AttachmentPreviewDialog.qml  InputMessageWidget.qml
ClientApp/Source/: Client.cpp  Client.h  main.cpp
Common/: CMakeLists.txt  Serializer.cpp  Serializer.h
Dependencies/: CMakeLists.txt
ServerApp/: CMakeLists.txt  Server.cpp  Server.h  Session.cpp  Session.h  main.cpp
(+2 files in other folders)
